# mistralhack

./: .env.example  .gitignore  README.md  context.md
brev/: quantize.sh  requirements_remote.txt  serve.sh  setup.sh  siphon.sh
docs/: API.md  backend_context.md  brev.md  frontend_context.md  quickstart.md  schema.sql
electron/: package.json  vite.config.js
electron/main/: index.js
electron/preload/: index.js
electron/renderer/: .env.example  index.html
electron/renderer/src/: App.jsx  FriendList.jsx  Login.jsx  PokeNotification.jsx  Settings.jsx  index.css  main.jsx  supabase.js
evals/: focus_dataset.json  run_eval.py
host/: local_llm.sh
sidecar/: collector.py  elevenlabs_utils.py  main.py  os_utils.py  pyproject.toml  requirements.txt  test_endpoints.py
sidecar/activity/: context.py  privacy.py  snapshot.py
sidecar/classification/: cache.py  classifier.py  feedback.py  nudge.py  tts.py
sidecar/routes/: activity.py  classify.py  config.py  feedback.py  health.py  nudge.py
ui-electron/: .gitignore  index.html  package-lock.json  package.json  vite.preload.config.mjs
ui-electron/src/: index.css  main.js  preload.js  renderer.js
